--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "test-coverage": "ng test -sr -cc -sm=false"
     },
     "dependencies": {
+        "@angular-devkit/core": "0.0.29",
         "@angular/animations": "^5.0.0",
         "@angular/common": "^5.0.0",
         "@angular/compiler": "^5.0.0",
@@ -43,18 +44,23 @@
         "@delon/abc": "^0.6.4",
         "@delon/acl": "^0.6.4",
         "@delon/auth": "^0.6.4",
-        "@delon/theme": "^0.6.4",
-        "@delon/mock": "^0.6.4",
         "@delon/cache": "^0.6.4",
+        "@delon/mock": "^0.6.4",
+        "@delon/theme": "^0.6.4",
         "@ngx-translate/core": "^9.0.0",
         "@ngx-translate/http-loader": "^2.0.0",
         "angular-baidu-maps": "^1.0.1",
         "angular-qq-maps": "^1.0.1",
         "angular-split": "^1.0.0-rc.0",
         "angular-tree-component": "^7.0.1",
+        "angular2-chartjs": "0.4.1",
+        "angular2-jwt": "^0.2.3",
+        "blueimp-md5": "^2.10.0",
         "core-js": "^2.5.1",
+        "echarts": "^3.8.5",
         "file-saver": "^1.3.3",
         "font-awesome": "^4.7.0",
+        "jquery": "^3.2.1",
         "moment": "^2.19.3",
         "ng-clipboard-antd": "^2.0.1",
         "ng-tree-antd": "^2.2.2",
@@ -71,12 +77,7 @@
         "simple-line-icons": "^2.4.1",
         "sweetalert2": "^7.0.0",
         "weather-icons": "^1.3.2",
-        "zone.js": "^0.8.18",
-        "angular2-chartjs": "0.4.1",
-        "blueimp-md5": "^2.10.0",
-        "echarts": "^3.8.5",
-        "angular2-jwt": "^0.2.3",
-        "jquery": "^3.2.1"
+        "zone.js": "^0.8.18"
     },
     "devDependencies": {
         "@angular/cli": "^1.6.2",
