--- a/src/assets/app-data.json
+++ b/src/assets/app-data.json
@@ -3,35 +3,29 @@
         "name": "Alain",
         "description": "Ng-zorro admin panel front-end framework"
     },
-    "user": {
-        "name": "Admin",
-        "avatar": "./assets/img/zorro.svg",
-        "email": "cipchk@qq.com"
-    },
     "menu": [{
         "text": "主导航",
-        "translate": "main_navigation",
         "group": true,
         "children": [{
             "text": "仪表盘",
             "translate": "dashboard",
-            "link": "/dashboard",
+            "link": "/app/dashboard",
             "icon": "icon-speedometer",
             "children": [{
                 "text": "仪表盘V1",
-                "link": "/dashboard/v1",
+                "link": "/app/dashboard/v1",
                 "translate": "dashboard_v1"
             }, {
                 "text": "分析页",
-                "link": "/dashboard/analysis",
+                "link": "/app/dashboard/analysis",
                 "translate": "dashboard_analysis"
             }, {
                 "text": "Monitor",
-                "link": "/dashboard/monitor",
+                "link": "/app/dashboard/monitor",
                 "translate": "dashboard_monitor"
             }, {
                 "text": "Workplace",
-                "link": "/dashboard/workplace",
+                "link": "/app/dashboard/workplace",
                 "translate": "dashboard_workplace"
             }]
         }, {
@@ -43,7 +37,7 @@
         }, {
             "text": "小部件",
             "translate": "widgets",
-            "link": "/widgets",
+            "link": "/app/widgets",
             "icon": "icon-grid",
             "badge": 2
         }]
@@ -54,127 +48,127 @@
         "children": [{
             "text": "基础元素",
             "translate": "elements",
-            "link": "/elements",
+            "link": "/app/elements",
             "icon": "icon-chemistry",
             "acl": "user1",
             "children": [{
                 "text": "按钮",
-                "link": "/elements/buttons",
+                "link": "/app/elements/buttons",
                 "translate": "buttons",
                 "shortcut": true
             }, {
                 "text": "Notification",
-                "link": "/elements/notification",
+                "link": "/app/elements/notification",
                 "translate": "notification",
                 "shortcut": true
             }, {
                 "text": "Modal",
-                "link": "/elements/modal",
+                "link": "/app/elements/modal",
                 "translate": "modal"
             }, {
                 "text": "SweetAlert",
-                "link": "/elements/sweetalert",
+                "link": "/app/elements/sweetalert",
                 "translate": "sweetalert"
             }, {
                 "text": "Tree Antd",
-                "link": "/elements/tree-antd",
+                "link": "/app/elements/tree-antd",
                 "translate": "tree-antd"
             }, {
                 "text": "Sortable",
-                "link": "/elements/sortable",
+                "link": "/app/elements/sortable",
                 "translate": "sortable"
             }, {
                 "text": "Spin",
-                "link": "/elements/spin",
+                "link": "/app/elements/spin",
                 "translate": "spin"
             }, {
                 "text": "Dropdown",
-                "link": "/elements/dropdown",
+                "link": "/app/elements/dropdown",
                 "translate": "dropdown"
             }, {
                 "text": "Grid",
-                "link": "/elements/grid",
+                "link": "/app/elements/grid",
                 "translate": "grid"
             }, {
                 "text": "Grid Masonry",
-                "link": "/elements/gridmasonry",
+                "link": "/app/elements/gridmasonry",
                 "translate": "gridmasonry"
             }, {
                 "text": "Typography",
-                "link": "/elements/typography",
+                "link": "/app/elements/typography",
                 "translate": "typography"
             }, {
                 "text": "Font Icons",
-                "link": "/elements/iconsfont",
+                "link": "/app/elements/iconsfont",
                 "translate": "iconsfont"
             }, {
                 "text": "Colors",
-                "link": "/elements/colors",
+                "link": "/app/elements/colors",
                 "translate": "colors"
             }]
         }, {
             "text": "Other",
             "translate": "other",
-            "link": "/other",
+            "link": "/app/other",
             "icon": "icon-magic-wand",
             "children": [{
                 "text": "Split",
-                "link": "/other/split",
+                "link": "/app/other/split",
                 "translate": "split"
             }, {
                 "text": "Clipboard",
-                "link": "/other/clipboard",
+                "link": "/app/other/clipboard",
                 "translate": "clipboard"
             }]
         }, {
             "text": "表单",
             "translate": "forms",
-            "link": "/forms",
+            "link": "/app/forms",
             "icon": "icon-note",
             "acl": "user1",
             "children": [{
                 "text": "标准",
-                "link": "/forms/standard",
+                "link": "/app/forms/standard",
                 "translate": "standard"
             }, {
                 "text": "扩展",
-                "link": "/forms/extended",
+                "link": "/app/forms/extended",
                 "translate": "extended"
             }, {
                 "text": "校验",
-                "link": "/forms/validation",
+                "link": "/app/forms/validation",
                 "translate": "validation"
             }, {
                 "text": "上传",
-                "link": "/forms/upload",
+                "link": "/app/forms/upload",
                 "translate": "upload",
                 "shortcut": true
             }, {
                 "text": "图片裁剪",
-                "link": "/forms/cropper",
+                "link": "/app/forms/cropper",
                 "translate": "cropper"
             }]
         }, {
             "text": "编辑器",
             "translate": "editor",
-            "link": "/editor",
+            "link": "/app/editor",
             "icon": "icon-pencil",
             "children": [{
                 "text": "UEditor",
-                "link": "/editor/ueditor"
+                "link": "/app/editor/ueditor"
             }, {
                 "text": "Tinymce",
-                "link": "/editor/tinymce"
+                "link": "/app/editor/tinymce"
             }]
         }, {
             "text": "Charts",
             "translate": "charts",
-            "link": "/charts",
+            "link": "/app/charts",
             "icon": "icon-graph",
             "acl": "user1",
             "children": [{
                 "text": "G2",
-                "link": "/charts/g2"
+                "link": "/app/charts/g2"
             }]
         }, {
             "text": "表格",
@@ -293,19 +287,19 @@
         }, {
             "text": "Exception",
             "translate": "pro-exception",
-            "link": "/",
+            "link": "/exception",
             "icon": "icon-fire",
             "children": [{
                 "text": "403",
-                "link": "/403",
+                "link": "/exception/403",
                 "reuse": false
             }, {
                 "text": "404",
-                "link": "/404",
+                "link": "/exception/404",
                 "reuse": false
             }, {
                 "text": "500",
-                "link": "/500",
+                "link": "/exception/500",
                 "reuse": false
             }]
         }, {
@@ -340,34 +334,35 @@
             "link": "/logics",
             "icon": "icon-compass",
             "children": [{
-                "text": "ACL",
-                "link": "/logics/acl",
-                "translate": "acl"
-            },
-            {
-                "text": "Route Guard",
-                "link": "/logics/guard",
-                "translate": "guard"
-            },
-            {
-                "text": "Cache",
-                "link": "/logics/cache",
-                "translate": "cache"
-            },
-            {
-                "text": "Down File",
-                "link": "/logics/downfile",
-                "translate": "downfile",
-                "shortcut": true
-            },
-            {
-                "text": "Xlsx",
-                "link": "/logics/xlsx"
-            },
-            {
-                "text": "Zip",
-                "link": "/logics/zip"
-            }]
+                    "text": "ACL",
+                    "link": "/logics/acl",
+                    "translate": "acl"
+                },
+                {
+                    "text": "Route Guard",
+                    "link": "/logics/guard",
+                    "translate": "guard"
+                },
+                {
+                    "text": "Cache",
+                    "link": "/logics/cache",
+                    "translate": "cache"
+                },
+                {
+                    "text": "Down File",
+                    "link": "/logics/downfile",
+                    "translate": "downfile",
+                    "shortcut": true
+                },
+                {
+                    "text": "Xlsx",
+                    "link": "/logics/xlsx"
+                },
+                {
+                    "text": "Zip",
+                    "link": "/logics/zip"
+                }
+            ]
         }, {
             "text": "Report",
             "translate": "report",
@@ -434,15 +429,15 @@
                     "translate": "list",
                     "badge": 1,
                     "badge_dot": true
-                },{
+                }, {
                     "text": "Comment",
                     "link": "/extras/blog/comment",
                     "translate": "comment"
-                },{
+                }, {
                     "text": "Post",
                     "link": "/extras/blog/post",
                     "translate": "post"
-                },{
+                }, {
                     "text": "WebSite",
                     "externalLink": "//github.com/cipchk/ng-alain",
                     "target": "_blank",
