--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
         "@delon/theme": "^0.6.4",
         "@delon/mock": "^0.6.4",
         "@delon/cache": "^0.6.4",
+        "@ngx-translate/core": "^9.0.0",
+        "@ngx-translate/http-loader": "^2.0.0",
         "angular-baidu-maps": "^1.0.1",
         "angular-qq-maps": "^1.0.1",
         "angular-split": "^1.0.0-rc.0",
