--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,10 @@
         "@shared/*": [ "app/shared/*" ],
         "@core": [ "app/core/" ],
         "@core/*": [ "app/core/*" ],
-        "@pages":["app/pages"],
-        "@pages/*":["app/pages/*"],
-        "@helpers":["app/helpers"],
-        "@helpers/*":["app/helpers/*"],
+        "@routes": [ "app/pages/" ],
+        "@routes/*": [ "app/pages/*" ],
+        "@helpers": [ "app/helpers"],
+        "@helpers/*": [ "app/helpers/*"],
         "@testing": [ "testing/" ],
         "@testing/*": [ "testing/*" ],
         "@env": [ "environments/" ],
